# nagara

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  justfile  package.json  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml  uv-upgrade.yml
alembic/: env.py  script.py.mako
alembic/versions/: 19574c9d1dff_initial_schema.py  3a4606abc50a_add_password_hash.py  635e6d50b5fc_add_outbox_events.py  9cfe52a7cfff_core_initial_schema.py  cd73027bb14d_core_initial_schema.py
deploy/helm/nagara-core/: .helmignore  Chart.yaml  values.yaml
deploy/helm/nagara-core/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: config-reference.md  deployment.md  development.md
frontend/: .gitignore  README.md  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
scripts/: config-dump.py  generate-client.sh  generate-config-docs.py  test-integration.sh
src/nagara/: __init__.py  config.py  envvar.py  events.py  exceptions.py  features.py  json_types.py  layered.py  lifespan.py  logging.py  main.py  middleware.py  models.py  outbox.py  profiles.py  rate_limit.py  routing.py  secret_backend.py  secrets.py  sentry.py
src/nagara/audit/: __init__.py  model.py
src/nagara/auth/: __init__.py  api.py  deps.py  hashing.py  jwt.py  schemas.py
src/nagara/cli/: __init__.py  formatters.py  main.py  router.py  schema.py
src/nagara/db/: __init__.py  mixins.py  session.py
src/nagara/iam/: __init__.py  membership.py  model.py  token.py
src/nagara/kit/: compression.py  pagination.py  paths.py  pubsub.py  redis.py  schemas.py  sorting.py  sse.py  utils.py
src/nagara/kit/repository/: __init__.py  base.py
src/nagara/org/: __init__.py  api.py  model.py  schemas.py
src/nagara/secret_backends/: __init__.py  infisical.py
src/nagara/workspace/: __init__.py  api.py  model.py  schemas.py
tests/: conftest.py  test_auth_api.py  test_auth_primitives.py  test_cli_discovery.py  test_cli_router.py  test_config.py  test_config_aliases.py  test_config_constraints.py  test_config_toml_sources.py  test_db_base.py  test_db_session.py  test_db_shutdown.py  test_envvar.py  test_events.py  test_exceptions.py  test_features.py  test_health.py  test_iam_principals.py  test_json_types.py  test_kit_compression.py  test_kit_pagination.py  test_kit_paths.py  test_kit_pubsub.py  test_kit_redis.py  test_kit_repository.py  test_kit_schemas.py  test_kit_sorting.py  test_kit_sse.py  test_kit_utils.py  test_layered.py  test_lifespan.py  test_main.py  test_membership_model.py  test_middleware.py  test_org_api.py  test_org_model.py  test_outbox.py  test_postgres_preflight.py  test_profiles.py  test_rate_limit.py  (+11 more)
