[project]
name = "nagara"
version = "0.1.0"
description = ""
authors = [
    { name = "Oluwadamilola Ifedayo", email = "dami.func@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
