[project]
name = "nagara"
version = "0.1.0"
description = ""
authors = [
    { name = "Oluwadamilola Ifedayo", email = "dami.func@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "redis>=5.0.0",
    "sentry-sdk[fastapi]>=2.20.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "coverage[toml]>=7.6.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.coverage.run]
source = ["src/nagara"]
branch = true
omit = ["src/nagara/cli/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
